<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:layout_marginBottom="35dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:text="@string/login" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/phone_number" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/Constraint2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:orientation="horizontal">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        app:ccp_showNameCode="false"
                        app:ccp_showArrow="false"
                        android:gravity="center"
                        android:background="@drawable/input_bg"
                        app:ccp_arrowColor="@color/black"
                        app:ccp_contentColor="@color/black" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="32dp"
                        android:background="@drawable/input_bg"
                        android:layout_marginTop="8dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone_number"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:id="@+id/result_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="70sp"
                    android:textColor="#7E7C7C"
                    android:text="@string/enter_your_phone_number_and_we_ll_send_you_a_six_digit_code_in_sms" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/otpContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/verification_code" />

                    <in.aabhasjindal.otptextview.OtpTextView
                        android:id="@+id/otp_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/black"
                        app:height="40dp"
                        app:width="40dp"
                        app:bar_enabled="true"
                        app:bar_height="2dp"
                        app:bar_active_color="@color/red"
                        app:bar_inactive_color="#E57373"
                        app:length="6"
                        app:otp_box_background="@drawable/input_bg"
                        app:otp_text_size="24dp"
                        android:visibility="visible"/>

                    <TextView
                        android:id="@+id/timerID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:text="@string/code_will_be_active_for_another_60_seconds"
                        android:textColor="#7E7C7C"
                        tools:ignore="RtlSymmetry" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/nameContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginTop="8dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:inputType="textPersonName"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:text="@string/enter_a_name_for_yourself"
                        android:textColor="#7E7C7C"
                        tools:ignore="RtlSymmetry" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/Constraint4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/send_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8.0dip"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8.0dip"
            android:layout_weight="1.0"
            android:text="@string/send_code"
            style="@style/ButtonLogin"
            android:background="@drawable/btn_login"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>