<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddTaskActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_schedule_task"
        android:layout_alignParentTop="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/snackBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_create_task"
                android:orientation="vertical"
                android:padding="20dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_new_task"
                    android:textColor="@color/black"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="Title"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editText_taskName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/black" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toStartOf="@+id/dateSelectButton"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/date"
                            android:textStyle="bold" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/dateTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toStartOf="@+id/buttonStartTime"
                            android:textColor="@color/black"
                            android:textSize="25sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/gray" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/dateSelectButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="@color/teal_200"
                        android:contentDescription="@string/date"
                        android:src="@drawable/calendar"
                        app:borderWidth="0dp" />

                </RelativeLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="Start time"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/textViewStartTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toStartOf="@+id/buttonStartTime"
                            android:textColor="@color/black"
                            android:textSize="30sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_below="@+id/textViewStartTime"
                            android:layout_toStartOf="@+id/buttonStartTime"
                            android:background="@color/gray" />

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/buttonStartTime"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentEnd="true"
                            android:backgroundTint="#7CB342"
                            android:src="@drawable/time"
                            app:borderWidth="0dp"
                            app:fabSize="mini" />

                    </RelativeLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="End time"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/textViewEndTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toStartOf="@+id/buttonEndTime"
                            android:textColor="@color/black"
                            android:textSize="30sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_below="@+id/textViewEndTime"
                            android:layout_toStartOf="@+id/buttonEndTime"
                            android:background="@color/gray" />

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/buttonEndTime"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentEnd="true"
                            android:backgroundTint="#EA80FC"
                            android:src="@drawable/time"
                            app:borderWidth="0dp"
                            app:fabSize="mini" />

                    </RelativeLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="Notify Before"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spinner_notify"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/timer"
                        android:spinnerMode="dropdown" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:visibility="gone"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="Repeat"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spinner_repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/repeat"
                        android:spinnerMode="dropdown" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </RelativeLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="Description"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="Link"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editText_taskLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/choose_category"
                    android:textColorHint="@color/gray"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radio_group_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radio_work"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="5dp"
                        android:text="@string/work"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:ignore="RtlSymmetry" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radio_personal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="5dp"
                        android:text="@string/personal"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:ignore="RtlSymmetry" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radio_health"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="5dp"
                        android:text="@string/health"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:ignore="RtlSymmetry" />

                </RadioGroup>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <Button
        android:id="@+id/button_schedule_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/schedule_task"
        android:layout_margin="15dp" />

</RelativeLayout>